--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ copyright: Copyright &copy; 2024 Richard Brooks
 # Configurations
 theme:
   name: material
+  favicon: figures/logo.png
   logo: figures/logo.png
   icon:
     repo: fontawesome/brands/github
@@ -46,7 +47,7 @@ theme:
     - search.highlight
     - search.share
     - search.suggest
-    - toc.follow
+    # - toc.follow
     # - toc.integrate
   palette:
     # Light mode
@@ -112,6 +113,7 @@ extra_javascript:
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 extra:
+  sidebar_content: sidebar.md
   status:
     new: Recently added
     deprecated: Deprecated
